# fruit-world

./: README.md  animation.py  backlog.md  berry.py  bushes.py  collisions.py  dialog_box.py  main.py  map_loading.py  maps.py  maps_data.py  npcs.py  platforms.py  player.py  player_mobility.py  pyproject.toml  scale_screen.py  static_objects.py  strawberry.py  ui.py
docs/: enum.md  kwargs-args.md  referencje-vs-argumenty.md
src/: animation.py  berry.py  berry_bush.py  bushes.py  collisions.py  debug.py  dialog_box.py  game_units.py  inventory.py  item.py  layout.py  main.py  map_interactions.py  map_loading.py  maps_data.py  npcs.py  platforms.py  player.py  player_mobility.py  quest.py  quests.py  scale_screen.py  settings_menu.py  sounds.py  sprite.py  static_objects.py  strawberry_quest.py
src/gameplay/: game_over_screen.py  resources_ui.py
src/gameplay/levels/: berry_bush.py  consumable.py  dialog.py  dialog_box.py  level.py  level_spec.py  levels_data.py  map.py  map_loading.py  map_spec.py  maps_data.py  npcs.py  platforms.py  (+3 more)
src/generation/: sounds.py
src/menu/: in_game_settings.py  main_menu.py  main_menu_settings.py  settings_menu.py  ui.py
src/player/: player.py  player_mobility.py
src/render/: animated_object.py  animation.py  conversation_avatars.py  debug.py  debuggable.py  drawable.py  effect_manager.py  effects.py  game_object.py  interaction_effects.py  lighting.py  resources.py  sprite_factory.py  sprite_object.py  visual_effect.py
src/screen/: control.py  fonts.py  fps_counter.py  game_inputs.py  game_units.py  layout.py  scale_screen.py
(+29 files in other folders)
